@@ -20,6 +20,7 @@ version <next>:
 - abitscope multimedia filter
 - Scenarist Closed Captions demuxer and muxer
 - threshold filter
+- midequalizer filter
 
 version 3.2:
 - libopenmpt demuxer
